welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:1: error: Int does not take parameters
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {for (i<-0 to nums.length()) {if (tab(i) == lookingFor) {return i}} ;return -1} 
                                                                                  ^indexOfValue:1: error: not found: value tab
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {for (i<-0 to nums.length()) {if (tab(i) == lookingFor) {return i}} ;return -1} 
                                                                                           ^